# MyTikTokVideoEditor

./: CMakeLists.txt
android/: settings.gradle
android/android_ffmpeg/: build_ffmpeg.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/whensunset/mytiktokvideoeditor/: GameActivity.java  MainActivity.java
android/mttvideoeditorsdk/: build.gradle
android/mttvideoeditorsdk/src/main/: AndroidManifest.xml
android/mttvideoeditorsdk/src/main/java/com/whensunset/mttvideoeditorsdk/: A.java
android/mttvideoeditorsdk/src/main/java/com/whensunset/mttvideoeditorsdk/model/: EditorModel.java
android/mttvideoeditorsdk/src/main/java/com/whensunset/mttvideoeditorsdk/model/protobuf/: EditorModel.java
android/mttvideoeditorsdk/src/main/java/tutorial/: Test.java
android/mttvideoeditorsdk/src/main/jni/: CMakeLists.txt
android/mttvideoeditorsdk/src/main/jni/editorsdk/: ffmpeg_sample.h  ffmpeg_sample_six.cpp  native-lib.cc
android/mttvideoeditorsdk/src/main/res/values/: strings.xml
buildtools/: build_ffmpeg.sh  build_proto.sh
buildtools/tools/protoc/v3.0.0/lib/: libprotobuf-lite.10.dylib  libprotobuf-lite.la  libprotobuf.10.dylib  libprotobuf.la  libprotoc.10.dylib  libprotoc.la
buildtools/tools/protoc/v3.0.0/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
sharedcode/editorsdk/base/: av_utils.cc  av_utils.h  blocking_queue.h
sharedcode/editorsdk/generated_protobuf/: editor_model.pb.cc  editor_model.pb.h  test.pb.cc  test.pb.h
sharedproto/: editor_model.proto
